# GPU-Train-SVM

./: Makefile  README  README-2  format_convert.py  setup_cuda.sh
data/: a1a.svm  a3a.svm  a5a.svm
example/: CMakeLists.txt  README  example.cu  example2.cu  get_gpusvm_lib.sh  grid.cu  grid.h  main.cpp  makefile-old  multi_grid.cu
example/common/: setupData.cu  setupData.h  transposeData.cu  transposeData.h
example/data/: a1a.svm  a2a.svm  pendigits.svm  pendigits.t  satimage.svm  satimage.t  svmguide4.svm  svmguide4.t
include/: svmClassify.h  svmTrain.h
src/classification/: Makefile  classifyMain.cu  svmClassify.cu
src/common/: common.mk  deviceSelect.h  framework.h  svmIO.cpp
src/training/: Cache.cpp  Cache.h  Makefile  firstOrder.h  initialize.h  memoryRoutines.h  processData.cu  processData.h  secondOrder.h  splitfeature.cpp  splitfeature.h  svmKernels.h  svmTrain.cu  trainingMain.cu  transposeRectangle.cu
